# triangle-peg-solitaire

./: CMakeLists.txt  README.md
src/: main.cpp  map.cpp  solitaire.cpp
